// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature/> renders the <Feature/> with just a subtitle 1`] = `
<div
  class="feature__Container-sc-1su4zea-0 jspaMn"
>
  <h2
    class="feature__SubTitle-sc-1su4zea-2 gqupws"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature/> renders the <Feature/> with just a title 1`] = `
<div
  class="feature__Container-sc-1su4zea-0 jspaMn"
>
  <h1
    class="feature__Title-sc-1su4zea-1 citBao"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature/> renders the <Feature/> with populated data 1`] = `
<div
  class="feature__Container-sc-1su4zea-0 jspaMn"
>
  <h1
    class="feature__Title-sc-1su4zea-1 citBao"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-1su4zea-2 gqupws"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
